tests/files/parser_tests/should_fail/115.cmdr
//Should not parse
x const = 4;